Fixed start menu z-index

--- a/client/src/Components/StartMenu/StartMenu.scss
+++ b/client/src/Components/StartMenu/StartMenu.scss
@@ -13,7 +13,7 @@ $darkColor: rgba(74, 68, 83, 0.85);
 	background-color: $darkColor;
 	height: 40vh;
 	width: 20vw;
-	z-index: 5;
+	z-index: 7;
 	border-radius: 10px;
 	box-shadow: $mediumShadow;
 }
